syntax = "proto3";
package sgenetwork.sge.dvm;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/sge-network/sge/x/dvm/types";

message PublicKeys {
  repeated string list = 1;
}
